fixed text overflow bug in overlays

--- a/PHASE_2/jamva/styles/Home.module.scss
+++ b/PHASE_2/jamva/styles/Home.module.scss
@@ -21,7 +21,6 @@
   top: 10%;
   right: 5%;
   position:absolute;
-  text-align: left;
 }
 
 .reportOverlay {
